# julia-guide

./: .gitignore  CMakeLists.txt  Makefile  Manifest.toml  Project.toml  README.md  _quarto.yml  index.qmd  installation.qmd  plotting.qmd  pyproject.toml  references.qmd  starter.qmd  summary.qmd  version.qmd
interoperability/: c.ipynb  fortran.qmd  index.qmd  python.ipynb  python.qmd  r.ipynb  r.qmd  rust.qmd
interoperability/c/: .gitignore  CMakeLists.txt  index.ipynb
interoperability/c/src/: lib.c  main.c
interoperability/fortran/: .gitignore  CMakeLists.txt  index.ipynb
interoperability/fortran/src/: lib.f90  main.f90
misc/: hpc.qmd
plotting/: gadfly.ipynb  index.qmd  makie.ipynb  plots.ipynb
src/: JuliaGuide.jl
starter/: environment.qmd  index.qmd  version.qmd
style/: documentation.qmd  index.qmd  license.qmd  logging.qmd  reading.qmd  structure.qmd  style.qmd  testing.qmd
