[tool.poetry]
name = "julia-guide"
version = "0.0.0"
description = ""
authors = ["Gabriel Wu <wuzihua@pku.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
juliacall = "^0.9.10"
numpy = "^1.24.1"
jupyter = "^1.0.0"
jupyter-cache = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
